--- a/N3Test/app/src/main/res/layout/activity_fullscreen.xml
+++ b/N3Test/app/src/main/res/layout/activity_fullscreen.xml
@@ -7,48 +7,14 @@
     tools:context=".FullscreenActivity">
 
 
-
-    <!-- The primary full-screen view. This can be replaced with whatever view
-         is needed to present your content, e.g. VideoView, SurfaceView,
-         TextureView, etc. -->
-
-    <!-- This FrameLayout insets its children based
-    on system windows using
-         android:fitsSystemWindows. -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:visibility="invisible">
-
-        <LinearLayout
-            android:id="@+id/fullscreen_content_controls"
-            style="?metaButtonBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|center_horizontal"
-            android:background="@color/black_overlay"
-            android:orientation="horizontal"
-            tools:ignore="UselessParent">
-
-            <Button
-                android:id="@+id/dummy_button"
-                style="?metaButtonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/dummy_button" />
-
-        </LinearLayout>
-    </FrameLayout>
-
-
     <Button
         android:layout_width="200dp"
         android:layout_height="100dp"
         android:id="@+id/btn_test_screen"
         android:layout_centerInParent="true"
         android:background="@android:color/black"
+        android:textColor="@color/white_color"
+        android:text="@string/start_test"
         />
 
 
