Udpate recycle view horizontal

--- a/N3Test/app/src/main/res/layout/activity_test.xml
+++ b/N3Test/app/src/main/res/layout/activity_test.xml
@@ -9,9 +9,10 @@
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
          TextureView, etc. -->
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:id="@+id/full_container">
 
         <android.support.v7.widget.RecyclerView
@@ -20,7 +21,7 @@
             android:id="@+id/rv_question"/>
 
 
-    </RelativeLayout>
+    </LinearLayout>
 
 
 </FrameLayout>
